Fixed link style button text alignment

--- a/WebContent/VAADIN/themes/base/button/button.css
+++ b/WebContent/VAADIN/themes/base/button/button.css
@@ -57,7 +57,7 @@
 .v-button-link,
 .v-nativebutton-link {
 	border: none;
-	text-align: left;
+	text-align: left !important;
 	background: transparent;
 	padding: 0;
 	color: inherit;
